@@ -1,5 +1,7 @@
 package com.example.syncrowbackend.friend.service;
 
+import com.example.syncrowbackend.auth.entity.User;
+import com.example.syncrowbackend.auth.repository.UserRepository;
 import com.example.syncrowbackend.common.exception.CustomException;
 import com.example.syncrowbackend.common.exception.ErrorCode;
 import com.example.syncrowbackend.friend.dto.FriendRequestPostDto;
@@ -13,8 +15,6 @@ import com.example.syncrowbackend.friend.repository.FriendRequestRepository;
 import com.example.syncrowbackend.friend.repository.GroupRepository;
 import com.example.syncrowbackend.friend.repository.PostRepository;
 import com.example.syncrowbackend.friend.repository.UserGroupRepository;
-import com.example.syncrowbackend.auth.entity.User;
-import com.example.syncrowbackend.auth.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
@@ -23,8 +23,8 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -40,7 +40,6 @@ public class PostServiceImpl implements PostService {
     @Override
     @Transactional
     public Long createPost(User user, PostRequestDto postDto) {
-        // groupId가 현재 로그인한 user가 참여중인 그룹인지 검증
         Group group = findGroup(postDto.getGroupId());
         if (!userGroupRepository.existsByUserAndGroup(user, group)) {
             throw new CustomException(ErrorCode.PERMISSION_NOT_GRANTED_ERROR, "사용자가 참여중인 그룹이 아닙니다.");
@@ -70,26 +69,22 @@ public class PostServiceImpl implements PostService {
 
     @Override
     @Transactional(readOnly = true)
-    public Page<GetUserResponseDto> getFriendRequestsByCurrentUser(User user, Pageable pageable) {
-        /* 로그인한 사용자가 쓴 친구신청 post */
+    public Page<GetUserResponseDto> getPostsWrittenByCurrentUser(User user, Pageable pageable) {
         Page<Post> posts = postRepository.findByUserId(user.getId(), pageable);
         return posts.map(GetUserResponseDto::toDto);
     }
 
     @Override
     @Transactional
-    public Page<GetUserResponseDto> getReceivedFriendRequestsByCurrentUser(User user, FriendRequestStatus status, Pageable pageable) {
-        /* 로그인한 사용자가 신청넣은 친구신청 post 정보 */
-        Page<FriendRequest> friendRequests = friendRequestRepository.findByRequestUserAndStatus(user, status, pageable);
+    public Page<GetUserResponseDto> getPostsRequestedByCurrentUser(User user, Pageable pageable) {
+        List<FriendRequestStatus> includedStatuses = Arrays.asList(FriendRequestStatus.ACCEPTED, FriendRequestStatus.PROGRESS);
+        Page<FriendRequest> friendRequests = friendRequestRepository.findByRequestUserAndStatusIn(user, includedStatuses, pageable);
 
-        List<GetUserResponseDto> getUserResponseDtos = friendRequests.getContent().stream()
-                .map(friendRequest -> {
-                    Post post = friendRequest.getPost();
-                    if (post == null) {
-                        throw new CustomException(ErrorCode.POST_NOT_FOUND_ERROR, "해당 게시글을 찾을 수 없습니다.");
-                    }
-                    return GetUserResponseDto.toDto(post);
-                }).collect(Collectors.toList());
+        List<GetUserResponseDto> getUserResponseDtos = friendRequests.getContent()
+                .stream()
+                .map(FriendRequest::getPost)
+                .map(GetUserResponseDto::toDto)
+                .toList();
 
         return new PageImpl<>(getUserResponseDtos, pageable, friendRequests.getTotalElements());
     }
